# getLogFile

./: CMakeLists.txt  MPI_mod.c  MPI_mod.h  a.out  input.txt  main.c
